# Ejemplos-github-actions

./: .env.example  .semgrep.yaml  Dockerfile  Makefile  README.md  bandit.yml  docker-compose.yml  index.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: 01-ci.yml  02-supplychain-local.yml  ci.yml
k8s/: deployment.yaml
scripts/: sbom.sh
slsa/: in-toto.layout.json
src/app/: cli.py  serve.py
tests/: test_cli.py
