[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci_lab_app"
version = "0.1.0"
description = "Tiny CLI + stdlib HTTP server for DevSecOps CI/CD lab (no Flask)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="CC3S2 Lab", email="example@example.com"}]
dependencies = []
